k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitlab-repo-creator
  labels:
    app.kubernetes.io/name: gitlab-repo-creator
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: gitlab-repo-creator
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
